syntax = "proto3";

package menu;

service MenuService {
  rpc CreateMenu (CreateMenuRequest) returns (MenuResponse);
  rpc GetMenu (GetMenuRequest) returns (MenuResponse);
  rpc UpdateMenu (UpdateMenuRequest) returns (MenuResponse);
  rpc DeleteMenu (DeleteMenuRequest) returns (DeleteMenuResponse);
  rpc ListMenus (ListMenusRequest) returns (ListMenusResponse);
}

message Menu {
  string id = 1;
  string name = 2;
  double price = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateMenuRequest {
  string name = 1;
  double price = 2;
}

message GetMenuRequest {
  string id = 1;
}

message UpdateMenuRequest {
  string id = 1;
  string name = 2;
  double price = 3;
}

message DeleteMenuRequest {
  string id = 1;
}

message MenuResponse {
  Menu menu = 1;
  string message = 2;
  bool success = 3;
}

message DeleteMenuResponse {
  string message = 1;
  bool success = 2;
}

message ListMenusRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListMenusResponse {
  repeated Menu menus = 1;
  int32 total = 2;
  bool success = 3;
}